--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,11 @@ dependencies:
   flutter_mobx: ^2.0.2
   sizer: ^2.0.15
   animated_splash_screen: ^1.1.0
+  dio: ^4.0.0
+  retrofit: ^2.0.1
+  json_serializable: ^5.0.2
+  intl: ^0.17.0
+  flutter_staggered_grid_view: ^0.4.0
 
 dev_dependencies:
   flutter_test:
@@ -52,6 +57,7 @@ dev_dependencies:
   flutter_lints: ^1.0.4
   mobx_codegen: ^2.0.3
   build_runner: ^2.1.2
+  retrofit_generator: ^2.0.1+1
   
 
 # For information on the generic Dart part of this file, see the
