--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,10 @@ dependencies:
   json_serializable: ^5.0.2
   intl: ^0.17.0
   flutter_staggered_grid_view: ^0.4.0
+  screenshot: ^1.2.3
+  pdf: ^3.6.0
+  path_provider: ^2.0.5
+  share_plus: ^2.1.4
 
 dev_dependencies:
   flutter_test:
